[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-llm-converter"
version = "1.2.0"
description = "Convert any HuggingFace model to NEXUS-LLM format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "pynvml>=11.5.0",
]

[project.scripts]
NEXUS-LLM = "nexus_converter:main"
nexus-llm = "nexus_converter:main"
